--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -5,7 +5,9 @@ $col: 12;
 $colWidth: 100% / $col;
 
 $primaryColor: #fd926d;
-$secondaryColor: #4e4e4e;
+// $secondaryColor: #4e4e4e;
+$secondaryColor: #000;
+
 // $threeColor: #232323;
 
 $btnBorderColor: $primaryColor;
